# App1

./: CMakeLists.txt  main.c  pizza.c  pizza.h  pizzas.csv
Tarea1 Terminada/: Makefile
app1/: main.c  metrics.c  pizza.h
app3/: main.c  pizza.c  pizza.h
app4/: main.c  metrics.c  pizza.h
src/: main.c  pizza.c  pizza.h
